[metadata]
name = crypto_stream
description = Crypto market data processing system
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    confluent-kafka>=2.7.0
    redis
    pandas
    pyyaml
    aiohttp
    tardis-dev
    click

[options.packages.find]
where = .
include = crypto_stream*
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    run-market-streamer = crypto_stream.market_data.streaming.kafka_streamer:main
    run-recorder-consumer = crypto_stream.market_data.processing.sampling_recorder_consumer:main
    crypto-stream = crypto_stream.cli:main